<resources>
    <string name="app_name">Homework005</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_book_here">Search Book Here</string>
    <string name="search">Search</string>
    <string name="donate_book">Donate Book</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="book_cover">book cover</string>
    <string name="out_of_the_box">Out of the box</string>
    <string name="dollar_25">25$</string>
    <string name="_5_left">5 left</string>
    <string name="published_on_2019">published on 2019</string>
    <string name="category">Category</string>
    <string name="three_dots">⋮</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="read">Read</string>
    <string name="by">By : </string>
    <string name="year_tag">, Year : </string>
    <string name="enter_title">Enter title</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="price">Price</string>
    <string name="enter_price">Enter price</string>
    <string name="enter_author">Enter author</string>
    <string name="author">Author</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_publish_year">Enter publish year</string>
    <string name="year">Year</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="dollar">$</string>
    <string name="left">left</string>
    <string name="by_author">by</string>
    <string name="published_on">published on</string>

    <string-array name="genre">
        <item>Novel</item>
        <item>Action</item>
        <item>Horror</item>
        <item>Education</item>
    </string-array>
</resources>
