<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="15dp">

            <ImageView
                android:id="@+id/book_cover_cv"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/out_of_the_box_book"
                android:adjustViewBounds="true"
                android:contentDescription="@string/book_cover"
                android:layout_alignParentTop="true"/>

            <TextView
                android:id="@+id/book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/out_of_the_box"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:paddingStart="@dimen/card_padding_15dp"
                android:paddingEnd="@dimen/card_padding_15dp"
                android:ellipsize="end"
                android:lines="1"
                android:layout_below="@+id/book_cover_cv" />

            <LinearLayout
                android:id="@+id/layout_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="@dimen/card_padding_15dp"
                android:paddingEnd="@dimen/card_padding_15dp"
                android:layout_below="@+id/book_title" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/by_author"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/book_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/out_of_the_box"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textSize="15sp"
                    android:ellipsize="end" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_author"
                android:paddingStart="@dimen/card_padding_15dp"
                android:paddingEnd="@dimen/card_padding_15dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/published_on"
                    android:textSize="15sp"
                    android:ellipsize="end" />
                <TextView
                    android:id="@+id/book_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/published_on_2019"
                    android:textSize="15sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:ellipsize="end" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_genre"
                android:layout_below="@+id/layout_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/card_padding_15dp"
                android:paddingEnd="@dimen/card_padding_15dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/book_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textSize="15sp"
                    android:ellipsize="end" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/genre"
                    android:textSize="15sp"
                    android:ellipsize="end" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/layout_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="@dimen/card_padding_15dp"
                android:paddingEnd="@dimen/card_padding_15dp"
                android:layout_below="@+id/layout_genre">

                <TextView
                    android:id="@+id/dollar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dollar"
                    android:textColor="@color/colorOrangeDeep"
                    android:ellipsize="end"
                    android:textSize="@dimen/text_20sp"
                    android:layout_gravity="start|top"
                    android:layout_marginEnd="@dimen/card_padding_15dp" />

                <TextView
                    android:id="@+id/book_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dollar_25"
                    android:textColor="@color/colorOrangeDeep"
                    android:textSize="45sp"
                    android:layout_marginStart="@dimen/card_padding_15dp"
                    android:ellipsize="end"/>
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/layout_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_price" >
                <TextView
                    android:id="@+id/book_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5_left"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:paddingStart="@dimen/card_padding_15dp"
                    android:paddingEnd="@dimen/card_padding_15dp"
                    android:layout_alignParentStart="true"
                    android:lines="1"
                    android:ellipsize="end" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/book_amount"
                    android:ellipsize="end"
                    android:text="@string/left"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/button_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three_dots"
                    android:textSize="20sp"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:gravity="end"
                    android:clickable="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
